--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,7 +14,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body>
+  <body class="app-container">
     {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
