Move index.html from templates to static

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>angular-router-ts-gulp</title>
+    <title>Flamber</title>
 
     <link rel="stylesheet" href="../../bower_components/angular-material/angular-material.css" />
-    <link rel="stylesheet" href="../static/release/app.css" />
+    <link rel="stylesheet" href="release/app.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     
     <script src="../../bower_components/jquery/dist/jquery.js"></script>
@@ -13,7 +13,7 @@
     <script src="../../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../../bower_components/angular-material/angular-material.js"></script>
     
-    <script src="../static/release/app.js"></script>
+    <script src="release/app.js"></script>
   </head>
   
   <body>
